GNOME Bugzilla – Bug 797054
h264parse: Critical warning when parsing framerate from youtube-dl
Last modified: 2018-08-31 14:52:31 UTC
gst_util_uint64_scale_int() is called with its last argument being a guint. :) youtube-dl "https://vimeo.com/280481143" -o - | G_DEBUG=fatal_criticals gst-play-1.0 fd://0 (gdb) bt
+ Trace 238681
Created attachment 373505 [details] [review] patch
Review of attachment 373505 [details] [review]: Makes sense.
Review of attachment 373505 [details] [review]: Accepted, not commited.
Comment on attachment 373505 [details] [review] patch Pushed in master, will cherry-pick to 1.14 as well! commit d7c87910c297c200151127e2fdc081e437923e82 (HEAD -> master, origin/master, origin/HEAD) Author: Philippe Normand <philn@igalia.com> Date: Thu Aug 30 17:44:07 2018 +0100 baseparse: avg_bitrate calculation critical warning fix The avg_bitrate is an unsigned int, so the gst_util_uin64_scale() function can't be used for it, as it expects signed integers for the fraction parts arguments. https://bugzilla.gnome.org/show_bug.cgi?id=797054